Fix after API changed
